2013-10-29: changes in translation process
    - locales can now be placed inside each module (/application/modues/MODULE/locales/targetLanguage.xliff), inside each library (/library/LIBNAME/locales/targetLanguage.xliff) and in addition inside /data/locales/targetLanguage.xliff
    - translations in the different locations get added up
    - translations inside /data/locales/targetLanguage.xliff have preference over those in the module, if the id is the same
    - the matching of a translation inside the xliff-files still works through the trans-unit-ID, where as the content of the ID now is the base64-encoded content of the translated string in the php-source-code (should be the same as the content of the source-Tag in the xliff-File). This way now linebreaks and quotes in the source-string are allowed now.
    - tags inside translated strings still should be plain html-tags and no xliff-tags. xliff-syntax of internal tags is still not supported.
    - missing translations are written to runtimeOptions.dir.logs (defined in application.ini). Write format is the same xliff as generated by http://translate5-url/translate/generatexliff. The missing translation-logs are written as one log by target language and by module. Missing translations of libraries are written to the log of the calling module due to architecture.
    - not found translations of the language defined in application.ini in runtimeOptions.translation.sourceCodeLocale are added to the xliff-file of that locale of the currently active module
    - http://translate5-url/translate/generatexliff writes new source-language-xliff-files  (i. e. de.xliff) for the language defined in runtimeOptions.translation.sourceCodeLocale based on the source-strings of the php and phtml-files of the application. Strings in ini-Files are not collected. Those are added on the fly if they are not found by the previously explained process